fix gap css

--- a/css/styles.css
+++ b/css/styles.css
@@ -42,7 +42,7 @@ body {
   padding-left: 15px;
   margin: 0 auto;
 
-  outline: 2px solid red;
+  /* outline: 2px solid red; */
 }
 
 .visually-hidden {
@@ -547,6 +547,16 @@ body {
 
 .footer {
   background-color: var(--violet);
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+
+.footer-top {
+  display: flex;
+  justify-content: space-between;
+  padding-bottom: 50px;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+  margin-bottom: 24px;
 }
 
 .footer-main-text {
@@ -555,21 +565,35 @@ body {
   line-height: 1.21;
   letter-spacing: -0.02em;
   color: var(--white-2);
+  max-width: 300px;
 }
 
 .footer-main-text span {
   color: var(--orange);
 }
 
+.footer-socials-contacts {
+  display: flex;
+  gap: 50px;
+}
+
+.socials {
+  flex-direction: column;
+  align-items: flex-start;
+}
+
 .footer-socials-head {
   font-weight: 500;
   font-size: 14px;
   line-height: 1.29;
-  /* text-align: center; */
+  text-align: end;
   color: var(--white-2);
+  margin-bottom: 14px;
 }
 
 .footer-socials {
+  display: flex;
+  gap: 14px;
 }
 
 .footer-socials-item {
@@ -578,12 +602,19 @@ body {
 .footer-socials-link {
 }
 
+.contacts {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
 .footer-address-head {
   font-weight: 500;
   font-size: 14px;
   line-height: 1.29;
-  /* text-align: center; */
+  text-align: center;
   color: var(--white-2);
+  margin-bottom: 14px;
 }
 
 .footer-address {
@@ -594,6 +625,10 @@ body {
 }
 
 .footer-address-item {
+}
+
+.footer-address-item:not(:last-child) {
+  margin-bottom: 4px;
 }
 
 .footer-address-link {
@@ -609,6 +644,8 @@ body {
 }
 
 .footer-menu {
+  display: flex;
+  gap: 24px;
 }
 
 .footer-menu-item {
